deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-reviews-tracker-deployment
  labels:
    app: movie-reviews-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-reviews-tracker
  template:
    metadata:
      labels:
        app: movie-reviews-tracker
    spec:
      containers:
      - name: movie-reviews-tracker
        image: maeldieudonne/mlops:testap13
        ports:
        - containerPort: 8000
        command: ["/bin/bash", "-c"]
        args:
        - |
          python -m setup.db_init &
          streamlit run dashboard5.py \
              --logger.level=debug \
              --server.port 8000 \
              --server.address 0.0.0.0 \
              --server.enableCORS false \
              --server.enableXsrfProtection false
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
