deployment/tracker_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-reviews-tracker-deployment
  labels:
    app: movie-reviews-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-reviews-tracker
  template:
    metadata:
      labels:
        app: movie-reviews-tracker
    spec:
      containers:
      - name: movie-reviews-tracker
        image: maeldieudonne/mlops:testap45
        command: ["/bin/bash", "-c"]
        args:
        - |
          poetry run python -m setup.db_init &&
          poetry run python scheduler.py
