deployment/api_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-movie-reviews-api-service
spec:
  selector:
    app: test-movie-reviews-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8001
  type: LoadBalancer
