deployment/dashboard_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-movie-reviews-dashboard-service
spec:
  selector:
    app: test-movie-reviews-dashboard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
