deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movies-api-service
spec:
  selector:
    app: movies-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
