deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movie-reviews-tracker-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - movie-reviews-tracker.lab.sspcloud.fr
  rules:
  - host: movie-reviews-tracker.lab.sspcloud.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: movie-reviews-tracker-service
            port:
              number: 80
